# Aquarium_game

./: LICENSE  README.md
source/: main.cpp
src/: download_all.sh  files_checklist.md  generate_project.py  main_cpp.txt  pain.cpp  readme_final.md  setup_script.sh
src/AquariumSimulator/: .gitignore  CMakeLists.txt  INSTRUCTIONS.txt  LICENSE  README.md  build.sh  setup.sh
src/AquariumSimulator/assets/: README.txt
src/AquariumSimulator/src/: COPIER_ICI.txt
src/core/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  TimeManager.cpp  TimeManager.h  Window.cpp  Window.h  time_manager.txt  window_renderer.txt
src/entities/: Decoration.cpp  Decoration.h  decoration_class.txt
src/managers/: AquariumManager.cpp  AquariumManager.h  EntityManager.cpp  EntityManager.h  aquarium_manager.txt  entity_manager.txt
src/systems/: FishBehavior.cpp  FishBehavior.h  ParticleSystem.cpp  ParticleSystem.h  fish_behavior.txt  particle_system.txt
src/ui/: DebugWindow.cpp  DebugWindow.h  ImGuiManager.cpp  ImGuiManager.h  debug_window.txt  imconfig.h  imgui.h  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.h  imgui_manager.txt
src/utils/: Math.cpp
